--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,1 +1,12 @@
-@import "compass_twitter_bootstrap";
+#scoreContainer {
+    top: 40px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    width: auto;
+    height: -webkit-calc(100% - 80px);
+    height: -moz-calc(100% - 80px);
+    height: calc(100% - 80px);
+}
+
